hosted database on azure and added token verification