@@ -1,15 +1,14 @@
 package com.degreeflow.security;
 
 import com.degreeflow.model.UserEntity;
+import com.degreeflow.repository.UserRepository;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
-import com.degreeflow.repository.UserRepository;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.stereotype.Service;
-
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class CustomUserDetailsService implements UserDetailsService {
@@ -22,16 +21,18 @@ public class CustomUserDetailsService implements UserDetailsService {
 
     @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
+        // Find user by username
         UserEntity userEntity = userRepository.findByUsername(username);
         if (userEntity == null) {
             throw new UsernameNotFoundException("User not found with username: " + username);
         }
 
-        // Ensure roles are correctly formatted with "ROLE_" prefix
-        List<SimpleGrantedAuthority> authorities = userEntity.getRoles().stream()
-                .map(role -> new SimpleGrantedAuthority("ROLE_" + role))
-                .toList();
+        // Convert roles to authorities
+        List<org.springframework.security.core.GrantedAuthority> authorities = userEntity.getRoles().stream()
+                .map(role -> new org.springframework.security.core.authority.SimpleGrantedAuthority("ROLE_" + role.getName()))
+                .collect(Collectors.toList());
 
+        // Return user with authorities
         return User.builder()
                 .username(userEntity.getUsername())
                 .password(userEntity.getPassword())
